[gd_scene load_steps=4 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Dino.tscn" type="PackedScene" id=2]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=3]

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Floor1" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 225 )

[node name="Floor2" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 225 )

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 25.0

[node name="Dino" parent="." instance=ExtResource( 2 )]
position = Vector2( 70, 200 )

[node name="CactusTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 408.0
margin_right = 618.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "score: 0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SpeedTimer" to="." method="_on_Speed_Timer_timeout"]
[connection signal="death" from="Dino" to="." method="_on_Dino_death"]
[connection signal="timeout" from="CactusTimer" to="." method="_on_CactusTimer_timeout"]
